- (squash) small fixes

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
@@ -196,10 +196,168 @@
         }
     }
     
-    [data-state-based-visibility="school-fields-errors"] ul {
-        padding-left: 0;
-        list-style: none;
-    }
+	.respond-to-min( @bp-med-min, {
+		@supports (position: sticky) {
+		    .app-container {
+		    	display: flex;
+		    }
+		    .app {
+		    	width: 70%;
+		    }
+		    .costs-not-covered-sticky {
+		    	width: 30%;
+		    	.number-callout {
+		    		position: sticky;
+					top: unit( 10px / @base-font-size-px, em );
+		    	}
+		    }
+		}
+	});
+
+	.u-border-bottom {
+		border-bottom: 1px solid @block__border-bottom;
+	}
+	
+	.block.block__mid {
+		margin-top: unit( @grid_gutter-width * 1.5 / @base-font-size-px, em );
+		margin-bottom: unit( @grid_gutter-width * 1.5 / @base-font-size-px, em );
+	}
+
+	// Notification explanation doesn't need top margin unless it follows message
+	.m-notification_explanation {
+		margin-top: 0;
+	}
+
+	.m-notification_message + .m-notification_explanation {
+		margin-top: unit( 5px / @base-font-size-px, em );
+	}
+
+	&_tool-section {
+		display: none;
+
+		max-width: unit( 570px / @base-font-size-px, rem );
+
+		.math-equation__bottom-line {
+			border-bottom: 2px solid black;
+		    padding-bottom: 30px;
+		}
+
+		.m-notification {
+			margin-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
+			margin-top: unit( @grid_gutter-width / @base-font-size-px, em );
+		}
+
+		input {
+			width: 100%;
+			box-sizing: border-box;
+		}
+
+		.o-expandable {
+			&_header,
+			&_content {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
+
+		&__school-search {
+			.m-notification {
+				margin-bottom: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+				margin-top: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+			}
+
+			.m-form-field {
+				margin-top: unit( @grid_gutter-width / 3 / @base-font-size-px, em );
+			}
+		}
+
+		&__costs {
+			.a-btn.active {
+				background-color: @white;
+				color: @pacific;
+				border-color: @pacific;
+			}
+		}
+
+		&__summary {
+			.financial-item {
+				margin-top: 0;
+			}
+
+			.financial-item + .financial-item {
+				margin-top: unit( @grid_gutter-width / 3 / @base-font-size-px, em );;
+			}
+		}
+
+		.other-borrowing-btns {
+			margin-bottom: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+		}
+
+		.action-plan_choices,
+		.affording-loans-choices {
+			// equal height radio inputs
+			display: flex;
+
+			.m-form-field {
+				width: 50%;
+				box-sizing: border-box;
+				&:first-child {
+					padding-right: 7px;
+				}
+				&:last-child {
+					padding-left: 7px;
+				}
+				label {
+					height: 100%;
+				}
+			}
+
+			&_about {
+				margin-top: unit( @grid_gutter-width / @base-font-size-px, em );
+			}
+
+		}
+	}
+
+	.school-results_comparison-section {
+		border: 2px solid @gray-20;
+		padding: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+
+		legend {
+			margin-bottom: unit( @grid_gutter-width / 3 / @base-font-size-px, em );
+		}
+
+		.school-results_rank-display {
+			display: flex;
+			align-items: center;
+			margin: unit( @grid_gutter-width / @base-font-size-px, em ) 0;
+		}
+
+		.big-percentile {
+			height: 110px;
+			width: 110px;
+		    border: 5px solid @black;
+		    border-radius: 50%;
+		    margin-right: 15px;
+		    line-height: 110px;
+		    text-align: center;
+		    font-size: 36px;
+		    font-weight: 600;
+		    flex: 1;
+		    flex-basis: 110px;
+		    flex-grow: 0;
+		    flex-shrinK: 0;
+		}
+
+		.m-form-field__radio {
+			display: inline-block;
+		}
+	}
+	
+	[data-state-based-visibility="school-fields-errors"] ul {
+		padding-left: 0;
+    	list-style: none;
+	}
 
     .o-table__financial {
         .indented-row td:first-child {
@@ -209,5 +367,7 @@
             font-weight: 600;
         }
     }
+}
+	
 }
 
